--- a/dpkg/rules
+++ b/dpkg/rules
@@ -19,17 +19,17 @@ override_dh_auto_test:
 
 .PHONY: override_dh_install
 override_dh_install:
-	# Create the libfole package.
-	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libfole
-	# Create the libfole-dev package.
-	dh_install "debian/tmp/usr/include/*.h" -p libfole-dev
-	dh_install "debian/tmp/usr/include/lib*/*.h" -p libfole-dev
-	dh_install "debian/tmp/usr/lib/*.a" -p libfole-dev
-	dh_install "debian/tmp/usr/lib/*.la" -p libfole-dev
-	dh_install "debian/tmp/usr/lib/*.so" -p libfole-dev
-	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libfole-dev
-	dh_install "debian/tmp/usr/share/man/man3/*" -p libfole-dev
-	# The libfole-dbg package is created by dh_strip.
+	# Create the libfwevt package.
+	dh_install "debian/tmp/usr/lib/lib*.so.*.*.*" -p libfwevt
+	# Create the libfwevt-dev package.
+	dh_install "debian/tmp/usr/include/*.h" -p libfwevt-dev
+	dh_install "debian/tmp/usr/include/lib*/*.h" -p libfwevt-dev
+	dh_install "debian/tmp/usr/lib/*.a" -p libfwevt-dev
+	dh_install "debian/tmp/usr/lib/*.la" -p libfwevt-dev
+	dh_install "debian/tmp/usr/lib/*.so" -p libfwevt-dev
+	dh_install "debian/tmp/usr/lib/pkgconfig/*" -p libfwevt-dev
+	dh_install "debian/tmp/usr/share/man/man3/*" -p libfwevt-dev
+	# The libfwevt-dbg package is created by dh_strip.
 	dh_install
 
 .PHONY: override_dh_installmenu
@@ -77,14 +77,14 @@ override_dh_pysupport:
 .PHONY: override_dh_strip
 override_dh_strip:
 ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
-	dh_strip -plibfole --dbg-package=libfole-dbg
+	dh_strip -plibfwevt --dbg-package=libfwevt-dbg
 endif
 
 .PHONY: override_dh_shlibdeps
 override_dh_shlibdeps:
-	dh_shlibdeps -Llibfole -l${PWD}/debian/tmp/usr/lib
+	dh_shlibdeps -Llibfwevt -l${PWD}/debian/tmp/usr/lib
 
 .PHONY: override_dh_makeshlibs
 override_dh_makeshlibs:
-	dh_makeshlibs -Xlibfole-dev
+	dh_makeshlibs -Xlibfwevt-dev
 
