--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
 # Files to ignore by git
 #
-# Version: 20130922
+# Version: 20141004
 
 # Generic auto-generated build files
 *~
 *.a
 *.la
 *.lai
+*.lineno
 *.lo
 *.Plo
 *.Po
@@ -107,6 +108,7 @@ stamp-h1
 /libcdata
 /libcerror
 /libcnotify
+/libcstring
 /libcthreads
 /libfdatetime
 /libfguid
