--- a/libfwevt-wiki.ini
+++ b/libfwevt-wiki.ini
@@ -2,7 +2,6 @@
 name: "libfwevt"
 status: "experimental"
 features: [
-    "debug_output",
     "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
@@ -16,10 +15,11 @@ url: "https://github.com/libyal/libfwevt.git"
 [tests]
 features: ["valgrind"]
 
+[troubleshooting]
+
 [cygwin]
 build_dependencies: []
-dll_dependencies: [
-    "**TODO describe dependencies**"]
+dll_dependencies: []
 dll_filename: "cygfwevt-0.dll"
 
 [gcc]
@@ -28,8 +28,7 @@ static_build_dependencies: []
 
 [mingw]
 build_dependencies: []
-dll_dependencies: [
-    "**TODO describe dependencies**"]
+dll_dependencies: []
 dll_filename: "libfwevt-1.dll"
 
 [msvscpp]
