--- a/include/libfwevt.h.in
+++ b/include/libfwevt.h.in
@@ -816,18 +816,27 @@ int libfwevt_xml_document_free(
      libfwevt_xml_document_t **xml_document,
      libfwevt_error_t **error );
 
+/* Clones the binary XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_clone(
      libfwevt_xml_document_t **destination_xml_document,
      libfwevt_xml_document_t *source_xml_document,
      libfwevt_error_t **error );
 
+/* Retrieves the root XML tag
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_get_root_xml_tag(
      libfwevt_xml_document_t *xml_document,
      libfwevt_xml_tag_t **root_xml_tag,
      libfwevt_error_t **error );
 
+/* Reads a binary XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_read(
      libfwevt_xml_document_t *xml_document,
@@ -839,12 +848,18 @@ int libfwevt_xml_document_read(
      libcdata_array_t *template_values_array,
      libfwevt_error_t **error );
 
+/* Retrieves the size of the UTF-8 formatted string of the XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_get_utf8_xml_string_size(
      libfwevt_xml_document_t *xml_document,
      size_t *utf8_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the UTF-8 formatted string of the XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_get_utf8_xml_string(
      libfwevt_xml_document_t *xml_document,
@@ -852,12 +867,18 @@ int libfwevt_xml_document_get_utf8_xml_string(
      size_t utf8_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the size of the UTF-16 formatted string of the XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_get_utf16_xml_string_size(
      libfwevt_xml_document_t *xml_document,
      size_t *utf16_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the UTF-16 formatted string of the XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_get_utf16_xml_string(
      libfwevt_xml_document_t *xml_document,
@@ -867,6 +888,9 @@ int libfwevt_xml_document_get_utf16_xml_string(
 
 #if defined( HAVE_DEBUG_OUTPUT )
 
+/* Debug prints the XML document
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_document_debug_print(
      libfwevt_xml_document_t *xml_document,
@@ -878,12 +902,18 @@ int libfwevt_xml_document_debug_print(
  * XML tag functions
  * ------------------------------------------------------------------------- */
 
+/* Retrieves the size of the UTF-8 formatted name
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf8_name_size(
      libfwevt_xml_tag_t *xml_tag,
      size_t *utf8_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the UTF-8 formatted name
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf8_name(
      libfwevt_xml_tag_t *xml_tag,
@@ -891,12 +921,18 @@ int libfwevt_xml_tag_get_utf8_name(
      size_t utf8_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the size of the UTF-16 formatted name
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf16_name_size(
      libfwevt_xml_tag_t *xml_tag,
      size_t *utf16_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the UTF-16 formatted name
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf16_name(
      libfwevt_xml_tag_t *xml_tag,
@@ -904,12 +940,18 @@ int libfwevt_xml_tag_get_utf16_name(
      size_t utf16_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the size of the UTF-8 formatted value
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf8_value_size(
      libfwevt_xml_tag_t *xml_tag,
      size_t *utf8_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the UTF-8 formatted value
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf8_value(
      libfwevt_xml_tag_t *xml_tag,
@@ -917,12 +959,18 @@ int libfwevt_xml_tag_get_utf8_value(
      size_t utf8_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the size of the UTF-16 formatted value
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf16_value_size(
      libfwevt_xml_tag_t *xml_tag,
      size_t *utf16_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the UTF-16 formatted value
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_utf16_value(
      libfwevt_xml_tag_t *xml_tag,
@@ -930,12 +978,18 @@ int libfwevt_xml_tag_get_utf16_value(
      size_t utf16_string_size,
      libfwevt_error_t **error );
 
+/* Retrieves the number of attributes
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_number_of_attributes(
      libfwevt_xml_tag_t *xml_tag,
      int *number_of_attributes,
      libfwevt_error_t **error );
 
+/* Retrieves a specific attribute
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_attribute_by_index(
      libfwevt_xml_tag_t *xml_tag,
@@ -943,6 +997,9 @@ int libfwevt_xml_tag_get_attribute_by_index(
      libfwevt_xml_tag_t **attribute_xml_tag,
      libfwevt_error_t **error );
 
+/* Retrieves the attribute for the specific UTF-8 encoded name
+ * Returns 1 if successful, 0 if no such value or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_attribute_by_utf8_name(
      libfwevt_xml_tag_t *xml_tag,
@@ -951,6 +1008,9 @@ int libfwevt_xml_tag_get_attribute_by_utf8_name(
      libfwevt_xml_tag_t **attribute_xml_tag,
      libfwevt_error_t **error );
 
+/* Retrieves the attribute for the specific UTF-16 encoded name
+ * Returns 1 if successful, 0 if no such value or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_attribute_by_utf16_name(
      libfwevt_xml_tag_t *xml_tag,
@@ -959,12 +1019,18 @@ int libfwevt_xml_tag_get_attribute_by_utf16_name(
      libfwevt_xml_tag_t **attribute_xml_tag,
      libfwevt_error_t **error );
 
+/* Retrieves the number of elements
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_number_of_elements(
      libfwevt_xml_tag_t *xml_tag,
      int *number_of_elements,
      libfwevt_error_t **error );
 
+/* Retrieves a specific element
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_element_by_index(
      libfwevt_xml_tag_t *xml_tag,
@@ -972,6 +1038,9 @@ int libfwevt_xml_tag_get_element_by_index(
      libfwevt_xml_tag_t **element_xml_tag,
      libfwevt_error_t **error );
 
+/* Retrieves the element for the specific UTF-8 encoded name
+ * Returns 1 if successful, 0 if no such value or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_element_by_utf8_name(
      libfwevt_xml_tag_t *xml_tag,
@@ -980,6 +1049,9 @@ int libfwevt_xml_tag_get_element_by_utf8_name(
      libfwevt_xml_tag_t **element_xml_tag,
      libfwevt_error_t **error );
 
+/* Retrieves the element for the specific UTF-16 encoded name
+ * Returns 1 if successful, 0 if no such value or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_element_by_utf16_name(
      libfwevt_xml_tag_t *xml_tag,
@@ -988,6 +1060,9 @@ int libfwevt_xml_tag_get_element_by_utf16_name(
      libfwevt_xml_tag_t **element_xml_tag,
      libfwevt_error_t **error );
 
+/* Retrieves the flags
+ * Returns 1 if successful or -1 on error
+ */
 LIBFWEVT_EXTERN \
 int libfwevt_xml_tag_get_flags(
      libfwevt_xml_tag_t *xml_tag,
