Changes for deployment.

--- a/configure.ac
+++ b/configure.ac
@@ -101,6 +101,11 @@ AS_IF(
   AC_SUBST(
    [HAVE_DLLMAIN],
    [1])
+
+  dnl Used in tests
+  AC_SUBST(
+   [LIBFWEVT_DLL_IMPORT],
+   ["-DLIBFWEVT_DLL_IMPORT"])
   ])
  ])
 
