Changes to wiki generation configuration.

--- a/libfwevt-wiki.ini
+++ b/libfwevt-wiki.ini
@@ -11,6 +11,7 @@ url: "https://googledrive.com/host/0B3fBvzttpiiSQ0FwMGwyODRZUlU/"
 
 [git]
 url: "https://github.com/libyal/libfwevt.git"
+build_dependencies: []
 
 [tests]
 features: ["valgrind"]
