--- a/libfwevt-wiki.ini
+++ b/libfwevt-wiki.ini
@@ -7,7 +7,7 @@ features: [
     "dpkg", "rpm"]
 
 [source_package]
-url: "https://googledrive.com/host/0B3fBvzttpiiSQ0FwMGwyODRZUlU/"
+url: "https://github.com/libyal/libfwevt/releases"
 
 [git]
 url: "https://github.com/libyal/libfwevt.git"
