Worked on tests.

--- a/libfwevt-wiki.ini
+++ b/libfwevt-wiki.ini
@@ -6,6 +6,8 @@ features: [
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
 
+[documentation]
+
 [source_package]
 url: "https://github.com/libyal/libfwevt/releases"
 
