Worked on format support.

--- a/libfwevt/libfwevt_definitions.h.in
+++ b/libfwevt/libfwevt_definitions.h.in
@@ -51,7 +51,8 @@
  */
 enum LIBFWEVT_XML_DOCUMENT_READ_FLAGS
 {
-	LIBFWEVT_XML_DOCUMENT_READ_FLAG_HAS_DATA_OFFSETS		= 0x01
+	LIBFWEVT_XML_DOCUMENT_READ_FLAG_HAS_DATA_OFFSETS		= 0x01,
+	LIBFWEVT_XML_DOCUMENT_READ_FLAG_HAS_DEPENDENCY_IDENTIFIERS	= 0x02
 };
 
 /* The binary XML token definitions
