--- a/libfwevt.ini
+++ b/libfwevt.ini
@@ -1,19 +1,17 @@
-[Project]
+[project]
 name: "libfwevt"
 status: "experimental"
+authors: ["Joachim Metz <joachim.metz@gmail.com>"]
+year_of_creation: "2011"
+download_url: "https://github.com/libyal/libfwevt/releases"
+git_url: "https://github.com/libyal/libfwevt.git"
+build_dependencies: []
 features: [
-    "git", "source_package",
     "cygwin", "gcc", "mingw", "msvscpp",
     "dpkg", "rpm"]
 
-[documentation]
-
-[source_package]
-url: "https://github.com/libyal/libfwevt/releases"
-
-[git]
-url: "https://github.com/libyal/libfwevt.git"
-build_dependencies: []
+[library]
+description: "Library to support the Windows XML Event Log (EVTX) data types"
 
 [tests]
 features: ["valgrind"]
