--- a/msvscpp/Makefile.am
+++ b/msvscpp/Makefile.am
@@ -1,4 +1,5 @@
 MSVSCPP_FILES = \
+	fwevt_get_version/fwevt_get_version.vcproj \
 	libcdata/libcdata.vcproj \
 	libcerror/libcerror.vcproj \
 	libcnotify/libcnotify.vcproj \
