Worked on tests.

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ stamp-h[1-9]
 /include/libfwevt/types.h
 /libfwevt/libfwevt.rc
 /libfwevt/libfwevt_definitions.h
+/tests/fwevt_test_error
 /tests/fwevt_test_get_version
 /tests/tmp*
 
