--- a/msvscpp/fwevt_test_error/fwevt_test_error.vcproj
+++ b/msvscpp/fwevt_test_error/fwevt_test_error.vcproj
@@ -2,9 +2,9 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9,00"
-	Name="fwevt_test_get_version"
-	ProjectGUID="{74B53AAA-840C-4B97-B54D-97577DDF51EE}"
-	RootNamespace="fwevt_test_get_version"
+	Name="fwevt_test_error"
+	ProjectGUID="{FD36C2F1-1C2A-457C-A585-B39DD8877DEF}"
+	RootNamespace="fwevt_test_error"
 	Keyword="Win32Proj"
 	TargetFrameworkVersion="131072"
 	>
@@ -176,7 +176,7 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath="..\..\tests\fwevt_test_get_version.c"
+				RelativePath="..\..\tests\fwevt_test_error.c"
 				>
 			</File>
 		</Filter>
