--- a/libfwevt.ini
+++ b/libfwevt.ini
@@ -5,13 +5,11 @@ authors: ["Joachim Metz <joachim.metz@gmail.com>"]
 year_of_creation: "2011"
 download_url: "https://github.com/libyal/libfwevt/releases"
 git_url: "https://github.com/libyal/libfwevt.git"
-build_dependencies: []
-features: [
-    "cygwin", "gcc", "mingw", "msvscpp",
-    "dpkg", "rpm"]
+features: ["debug_output"]
 
 [library]
 description: "Library to support the Windows XML Event Log (EVTX) data types"
+build_dependencies: []
 
 [tests]
 features: ["valgrind"]
