--- a/libfwevt.ini
+++ b/libfwevt.ini
@@ -9,6 +9,7 @@ features: ["debug_output"]
 
 [library]
 description: "Library to support the Windows XML Event Log (EVTX) data types"
+public_types: ["channel", "event", "keyword", "level", "manifest", "map", "opcode", "provider", "task", "template", "xml_document", "xml_tag", "xml_template_value"]
 build_dependencies: []
 
 [tests]
