--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,8 +16,35 @@ EXTRA_DIST = \
 	$(check_SCRIPTS)
 
 check_PROGRAMS = \
+	fwevt_test_channel \
 	fwevt_test_error \
-	fwevt_test_get_version
+	fwevt_test_event \
+	fwevt_test_keyword \
+	fwevt_test_level \
+	fwevt_test_manifest \
+	fwevt_test_map \
+	fwevt_test_opcode \
+	fwevt_test_provider \
+	fwevt_test_support \
+	fwevt_test_task \
+	fwevt_test_template \
+	fwevt_test_xml_document \
+	fwevt_test_xml_tag \
+	fwevt_test_xml_template_value
+
+fwevt_test_channel_SOURCES = \
+	fwevt_test_channel.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_channel_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
 
 fwevt_test_error_SOURCES = \
 	fwevt_test_error.c \
@@ -30,15 +57,183 @@ fwevt_test_error_LDADD = \
 	../libfwevt/libfwevt.la \
 	@LIBCSTRING_LIBADD@
 
-fwevt_test_get_version_SOURCES = \
-	fwevt_test_get_version.c \
+fwevt_test_event_SOURCES = \
+	fwevt_test_event.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_event_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_keyword_SOURCES = \
+	fwevt_test_keyword.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_keyword_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_level_SOURCES = \
+	fwevt_test_level.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_level_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_manifest_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_manifest.c \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_manifest_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_map_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_map.c \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_map_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_opcode_SOURCES = \
+	fwevt_test_opcode.c \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h
+
+fwevt_test_opcode_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_provider_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_provider.c \
+	fwevt_test_unused.h
+
+fwevt_test_provider_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_support_SOURCES = \
+	fwevt_test_support.c \
 	fwevt_test_libcstring.h \
 	fwevt_test_libfwevt.h \
 	fwevt_test_macros.h \
 	fwevt_test_unused.h
 
-fwevt_test_get_version_LDADD = \
+fwevt_test_support_LDADD = \
 	../libfwevt/libfwevt.la \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_task_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_task.c \
+	fwevt_test_unused.h
+
+fwevt_test_task_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_template_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_template.c \
+	fwevt_test_unused.h
+
+fwevt_test_template_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_xml_document_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h \
+	fwevt_test_xml_document.c
+
+fwevt_test_xml_document_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_xml_tag_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h \
+	fwevt_test_xml_tag.c
+
+fwevt_test_xml_tag_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
+	@LIBCSTRING_LIBADD@
+
+fwevt_test_xml_template_value_SOURCES = \
+	fwevt_test_libcerror.h \
+	fwevt_test_libcstring.h \
+	fwevt_test_libfwevt.h \
+	fwevt_test_macros.h \
+	fwevt_test_memory.h fwevt_test_memory.c \
+	fwevt_test_unused.h \
+	fwevt_test_xml_template_value.c
+
+fwevt_test_xml_template_value_LDADD = \
+	../libfwevt/libfwevt.la \
+	@LIBCERROR_LIBADD@ \
 	@LIBCSTRING_LIBADD@
 
 MAINTAINERCLEANFILES = \
