--- a/include/libfwevt/definitions.h.in
+++ b/include/libfwevt/definitions.h.in
@@ -146,5 +146,5 @@ enum LIBFWEVT_XML_TEMPLATE_VALUE_FLAGS
 	LIBFWEVT_XML_TEMPLATE_VALUE_FLAG_IS_DEFINITION			= 0x01
 };
 
-#endif
+#endif /* !defined( _LIBFWEVT_DEFINITIONS_H ) */
 
