Worked on tests

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -6,10 +6,12 @@ AM_CPPFLAGS = \
 	@LIBFWEVT_DLL_IMPORT@
 
 TESTS = \
-	test_api_functions.sh
+	test_api_functions.sh \
+	test_api_types.sh
 
 check_SCRIPTS = \
 	test_api_functions.sh \
+	test_api_types.sh \
 	test_runner.sh
 
 EXTRA_DIST = \
