Worked on tests

--- a/.gitignore
+++ b/.gitignore
@@ -135,6 +135,7 @@ stamp-h[1-9]
 /tests/fwevt_test_xml_document
 /tests/fwevt_test_xml_tag
 /tests/fwevt_test_xml_template_value
+/tests/fwevt_test_xml_token
 /tests/tmp*
 
 # Local library dependencies specific files
